[package]
name = "ocsp-server"
authors = ["DorianCoding <108593662+DorianCoding@users.noreply.github.com>"]
description = "OCSP server, listening for requests to give responses."
version = "0.4.1"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.85"
repository = "https://github.com/DorianCoding/OCSP_server"
keywords = ["ocsp", "server", "ocsp-response"]
categories = ["caching", "cryptography"]
exclude = [
    "binaries/*",
    "config.toml",
    "service.sh",
]

[dependencies]
clap = { version = "4.5.32", features = ["derive", "cargo"] }
chrono = { version = "~0.4.40", default-features = false, features = ["std"]}
config-file = "~0.2.3"
hex = "~0.4.3"
mysql = { version = "~26.0.0", default-features = false, features = ["minimal"]}
ocsp = {git = "https://github.com/DorianCoding/ocsp-rs.git", tag="1.0.0" }
#ocsp = {git = "https://github.com/maicallist/ocsp-rs.git" }
pem = "3.0.5"
#openssl-sys = { version = "~0.9.103", features = ["vendored" ]}
ring = "0.17.14"
rocket = "~0.5.1"
serde = "~1.0.219"
x509-parser = "~0.17.0"
zeroize = { version = "~1.8.1", features = ["std", "zeroize_derive"] }

[profile.release]
strip = "symbols"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"

[badges]
maintenance = {status = "passively-maintained" }
